<resources>
    <string name="app_name">Wellth</string>
    <string name="slide_1_title">Welcome</string>
    <string name="slide_1_desc">Wellth helps you connect and share with people who have same health issues or body issues as you.</string>
    <string name="slide_2_title"></string>
    <string name="slide_2_desc">You can ask a question or share your knowledge, experiences about any health or body issue with your health friends or just Post an uplifting Image/Video.</string>
    <string name="healthissue_desc">Adding health and body issues will help you connect with people who have same health issues.\n\n</string>
    <string name="home">Home</string>
    <string name="public_forum">Forum</string>
    <string name="add_friends">Friends</string>
    <string name="friends_requests">Requests</string>
    <string name="profile">Profile</string>
    <string name="terms_and_contents">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="health_issue">Health or body issues</string>
    <string name="ask_question">Ask a question</string>
    <string name="answer_question">Answer a question</string>
    <string name="comment_post">Post a Comment</string>
    <string name="share_uplifting">Share an uplifting</string>
    <string name="details">Details</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="health_friends">Health Friends</string>
    <string name="country_why">You will have more chance of being accepted by people of your city/country.</string>
    <string name="age_why">You will have more chance of being accepted by people of similar age.</string>
    <string name="add_more">You can add more health issues in profile page.</string>
    <string name="message_like_success">Thanks for your like!</string>
    <string name="message_like_exist">You have already liked.</string>
    <string name="message_invite_success">Request sent successfully!</string>
    <string name="message_invite_exist">We both are already friends.</string>
    <string name="message_sent_invite">You already sent request.</string>
    <string name="message_not_exist_health_issue">Please add one health issue at least.</string>
    <string name="message_request_accept">You just accepted request.</string>
    <string name="message_request_cancel">You just canceled request.</string>
    <string name="message_profile_update_success">Profile updated successfully!</string>
    <string name="message_profile_image_changed">Profile image changed.</string>
    <string name="message_empty_home_feeds">Add Health Friends and start sharing all about Health and Body issues.</string>
    <string name="message_empty_profile_posts">You haven\'t shared any posts yet.</string>
    <string name="message_empty_profile_questions">You haven\'t asked any questions yet.</string>
    <string name="update_profile">update_profile</string>
    <string name="update_request">update_request</string>
    <string name="update_post_real_time">update_post_real_time</string>
    <string name="create_post_real_time">create_post_real_time</string>
    <string name="click_notification">click_notification</string>
    <string name="parse_server_live_url">wss://wellth.back4app.io</string>
    <string name="parse_server_url">https://parseapi.back4app.com/</string>
    <string name="parse_app_id">Lgk1swICG2ohVVoXJilOskFPTrLlLHe4rOrQQ9KN</string>
    <string name="parse_client_key">0mLrs1ngYFgkeDPBucLivCoQOvTiAit5AIPBHkcO</string>
    <string name="facebook_app_id">526629117677018</string>
    <string name="fb_login_protocol_scheme">fb526629117677018</string>
    <string name="date_util_term_less">less than</string>
    <string name="date_util_term_a">a</string>
    <string name="date_util_term_an">an</string>
    <string name="date_util_unit_second">second</string>
    <string name="date_util_unit_seconds">seconds</string>
    <string name="date_util_unit_minute">minute</string>
    <string name="date_util_unit_minutes">minutes</string>
    <string name="date_util_unit_hour">hour</string>
    <string name="date_util_unit_hours">hours</string>
    <string name="date_util_unit_day">day</string>
    <string name="date_util_unit_days">days</string>
    <string name="date_util_unit_month">month</string>
    <string name="date_util_unit_months">months</string>
    <string name="date_util_unit_year">year</string>
    <string name="date_util_unit_years">years</string>
    <string name="date_util_prefix_lt">less than a</string>
    <string name="date_util_prefix_about">about</string>
    <string name="date_util_prefix_over">over</string>
    <string name="date_util_prefix_almost">almost</string>
    <string name="date_util_suffix">ago</string>
    <string name="privacy">Innorise Online Services Private Limited ("us", "we", or "our") operates the Wellth mobile application (the "Service"). \n\n

This page informs you of our policies regarding the collection, use and disclosure of Personal Information when you use our Service. \n\n

We will not use or share your information with anyone except as described in this Privacy Policy. \n\n

We use your Personal Information for providing and improving the Service. By using the Service, you agree to the collection and use of information in accordance with this policy. Unless otherwise defined in this Privacy Policy, terms used in this Privacy Policy have the same meanings as in our Terms and Conditions. \n\n

Information Collection And Use \n
-------------------------------------------- \n

While using our Service, we may ask you to provide us with certain personally identifiable information that can be used to contact or identify you. \n
Personally identifiable information may include, but is not limited to, your email address, name, phone number, postal address, other information ("Personal Information"). \n\n

Log Data \n
------------- \n\n

When you access the Service by or through a mobile device, we may collect certain information automatically, including, but not limited to, the type of mobile device you use, your mobile device unique ID, the IP address of your mobile device, your mobile operating system, the type of mobile Internet browser you use and other statistics ("Log Data"). \n\n

In addition, we may use third party services such as Google Analytics that collect, monitor and analyze this type of information in order to increase our Service\'s functionality. These third party service providers have their own privacy policies addressing how they use such information. \n\n

Cookies \n
----------- \n\n

Cookies are files with small amount of data, which may include an anonymous unique identifier. Cookies are sent to your browser from a web site and stored on your computer\'s hard drive. \n\n

We use "cookies" to collect information. You can instruct your browser to refuse all cookies or to indicate when a cookie is being sent. However, if you do not accept cookies, you may not be able to use some portions of our Service. \n\n

Service Providers \n
------------------------ \n\n

We may employ third party companies and individuals to facilitate our Service, to provide the Service on our behalf, to perform Service-related services or to assist us in analyzing how our Service is used. \n\n

These third parties have access to your Personal Information only to perform these tasks on our behalf and are obligated not to disclose or use it for any other purpose. \n\n

Compliance With Laws \n
-------------------------------- \n\n

We will disclose your Personal Information where required to do so by law or subpoena or if we believe that such action is necessary to comply with the law and the reasonable requests of law enforcement or to protect the security or integrity of our Service. \n\n

Business Transaction \n
------------------------------ \n\n

If Innorise Online Services Private Limited is involved in a merger, acquisition or asset sale, your Personal Information may be transferred. We will provide notice before your Personal Information is transferred and becomes subject to a different Privacy Policy. \n\n

Security \n
------------ \n\n

The security of your Personal Information is important to us, but remember that no method of transmission over the Internet, or method of electronic storage is 100% secure. While we strive to use commercially acceptable means to protect your Personal Information, we cannot guarantee its absolute security. \n\n

International Transfer \n
------------------------------- \n\n

Your information, including Personal Information, may be transferred to — and maintained on — computers located outside of your state, province, country or other governmental jurisdiction where the data protection laws may differ than those from your jurisdiction. \n\n

If you are located outside India and choose to provide information to us, please note that we transfer the information, including Personal Information, to India and process it there. \n\n

Your consent to this Privacy Policy followed by your submission of such information represents your agreement to that transfer. \n\n

Links To Other Sites \n
---------------------------- \n\n

Our Service may contain links to other sites that are not operated by us. If you click on a third party link, you will be directed to that third party\'s site. We strongly advise you to review the Privacy Policy of every site you visit. \n\n

We have no control over, and assume no responsibility for the content, privacy policies or practices of any third party sites or services. \n\n

Children\'s Privacy \n
------------------------- \n\n

Our Service does not address anyone under the age of 13 ("Children"). \n\n

We do not knowingly collect personally identifiable information from children under 13. If you are a parent or guardian and you are aware that your Children has provided us with Personal Information, please contact us. If we become aware that we have collected Personal Information from a children under age 13 without verification of parental consent, we take steps to remove that information from our servers. \n\n

Changes To This Privacy Policy \n
------------------------------------------- \n\n

We may update our Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page. \n\n

You are advised to review this Privacy Policy periodically for any changes. \n
Changes to this Privacy Policy are effective when they are posted on this page. \n\n

Contact Us \n
---------------- \n\n

If you have any questions about this Privacy Policy, please contact us. \n\n\n

</string>
</resources>