<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Activity.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:id="@+id/actionbar"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>
        <RelativeLayout
            android:id="@+id/layout_tabbar"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="75dp">
            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true"
                tools:ignore="UselessParent">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageButton
                        android:id="@+id/btn_home"
                        android:layout_centerHorizontal="true"
                        android:layout_width="@dimen/tab_icon_size"
                        android:layout_height="@dimen/tab_icon_size"
                        android:background="@drawable/tab_home_selected"
                        android:contentDescription=""
                        tools:ignore="ContentDescription" />
                    <TextView
                        android:layout_marginTop="2dp"
                        android:layout_below="@id/btn_home"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:textSize="12sp"
                        android:textColor="@color/colorDefault"
                        android:gravity="center"
                        android:text="@string/home"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/tab_icon_padding"
                    tools:ignore="RtlHardcoded">
                    <ImageButton
                        android:id="@+id/btn_public_forum"
                        android:layout_centerHorizontal="true"
                        android:layout_width="@dimen/tab_icon_size"
                        android:layout_height="@dimen/tab_icon_size"
                        android:background="@drawable/tab_forum_unselected"
                        tools:ignore="ContentDescription" />
                    <TextView
                        android:layout_marginTop="2dp"
                        android:layout_below="@id/btn_public_forum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:textSize="12sp"
                        android:textColor="@color/colorDefault"
                        android:gravity="center"
                        android:text="@string/public_forum"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/tab_icon_padding"
                    tools:ignore="RtlHardcoded">
                    <ImageButton
                        android:id="@+id/btn_add_friends"
                        android:layout_centerHorizontal="true"
                        android:layout_width="@dimen/tab_icon_size"
                        android:layout_height="@dimen/tab_icon_size"
                        android:background="@drawable/tab_friend_unselected"
                        tools:ignore="ContentDescription" />
                    <TextView
                        android:layout_marginTop="2dp"
                        android:layout_below="@id/btn_add_friends"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:textSize="12sp"
                        android:textColor="@color/colorDefault"
                        android:gravity="center"
                        android:text="@string/add_friends"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/tab_icon_padding"
                    tools:ignore="RtlHardcoded">
                    <ImageButton
                        android:id="@+id/btn_friends_requests"
                        android:layout_centerHorizontal="true"
                        android:layout_width="@dimen/tab_icon_size"
                        android:layout_height="@dimen/tab_icon_size"
                        android:background="@drawable/tab_request_unselected"
                        tools:ignore="ContentDescription" />
                    <TextView
                        android:layout_marginTop="2dp"
                        android:layout_below="@id/btn_friends_requests"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:textSize="12sp"
                        android:textColor="@color/colorDefault"
                        android:gravity="center"
                        android:text="@string/friends_requests"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/tab_icon_padding"
                    tools:ignore="RtlHardcoded">
                    <ImageButton
                        android:id="@+id/btn_profile"
                        android:layout_centerHorizontal="true"
                        android:layout_width="@dimen/tab_icon_size"
                        android:layout_height="@dimen/tab_icon_size"
                        android:background="@drawable/tab_profile_unselected"
                        tools:ignore="ContentDescription" />
                    <TextView
                        android:layout_marginTop="2dp"
                        android:layout_below="@id/btn_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:textSize="12sp"
                        android:textColor="@color/colorDefault"
                        android:gravity="center"
                        android:text="@string/profile"/>
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>
        <android.support.design.widget.TabLayout
            android:id="@+id/tab_layout"
            android:visibility="gone"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            app:tabIndicatorColor="@android:color/white">
        </android.support.design.widget.TabLayout>

        <android.support.v4.view.ViewPager
            android:layout_above="@id/layout_tabbar"
            android:layout_below="@id/actionbar"
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>